ProductionBackUp/src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Comcast Business Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Available</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Not Converted</fullName>
        </values>
        <values>
            <fullName>Nurturing</fullName>
        </values>
        <values>
            <fullName>Unassigned</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Cancel_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancel Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <label>Customer ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Sub_Type__c</fullName>
        <label>Customer Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Customer_Sub_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Type2__c</fullName>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Customer_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Status_Change__c</fullName>
        <label>Date of Status Change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EpsBusinessId__c</fullName>
        <label>EpsBusinessId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Conversion_Check__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Lead Conversion Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Text__c</fullName>
        <formula>TEXT( LeadSource )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Source Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_of_Interest__c</fullName>
        <label>Product of Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SIP</fullName>
                </value>
                <value>
                    <fullName>PRI</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BTVPri</fullName>
                </value>
                <value>
                    <fullName>BTVPub</fullName>
                </value>
                <value>
                    <fullName>BV</fullName>
                </value>
                <value>
                    <fullName>BVE</fullName>
                </value>
                <value>
                    <fullName>SAAS</fullName>
                </value>
                <value>
                    <fullName>Eth</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quick_Notes__c</fullName>
        <label>Quick Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Loss__c</fullName>
        <label>Reason for Loss</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bad lead - Do not use in the future</fullName>
                </value>
                <value>
                    <fullName>Customer in contract for services</fullName>
                </value>
                <value>
                    <fullName>Customer is not interested in services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Campaign__c</fullName>
        <description>Sales Rep to enter when creating a lead</description>
        <label>Related Campaign</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Owner__c</fullName>
        <label>Relationship Owner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Relationship_Owner</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SIC_ID__c</fullName>
        <label>SIC ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Population__c</fullName>
        <label>Special Population</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Special_Population</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Industry__c</fullName>
        <label>Sub-Industry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>011</fullName>
                </value>
                <value>
                    <fullName>013</fullName>
                </value>
                <value>
                    <fullName>016</fullName>
                </value>
                <value>
                    <fullName>017</fullName>
                </value>
                <value>
                    <fullName>018</fullName>
                </value>
                <value>
                    <fullName>019</fullName>
                </value>
                <value>
                    <fullName>021</fullName>
                </value>
                <value>
                    <fullName>024</fullName>
                </value>
                <value>
                    <fullName>025</fullName>
                </value>
                <value>
                    <fullName>027</fullName>
                </value>
                <value>
                    <fullName>029</fullName>
                </value>
                <value>
                    <fullName>071</fullName>
                </value>
                <value>
                    <fullName>072</fullName>
                </value>
                <value>
                    <fullName>074</fullName>
                </value>
                <value>
                    <fullName>076</fullName>
                </value>
                <value>
                    <fullName>078</fullName>
                </value>
                <value>
                    <fullName>081</fullName>
                </value>
                <value>
                    <fullName>083</fullName>
                </value>
                <value>
                    <fullName>085</fullName>
                </value>
                <value>
                    <fullName>091</fullName>
                </value>
                <value>
                    <fullName>092</fullName>
                </value>
                <value>
                    <fullName>097</fullName>
                </value>
                <value>
                    <fullName>101</fullName>
                </value>
                <value>
                    <fullName>102</fullName>
                </value>
                <value>
                    <fullName>103</fullName>
                </value>
                <value>
                    <fullName>104</fullName>
                </value>
                <value>
                    <fullName>108</fullName>
                </value>
                <value>
                    <fullName>109</fullName>
                </value>
                <value>
                    <fullName>122</fullName>
                </value>
                <value>
                    <fullName>123</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>Alabama_Leads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Alabama Leads</label>
        <queue>Alabama_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Alaska_Leads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Alaska Leads</label>
        <queue>Alaska_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>Arizona_Leads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Arizona Leads</label>
        <queue>Arizona_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Arkansas_Leads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Arkansas Leads</label>
        <queue>Arkansas_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>California_Leads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>California Leads</label>
        <queue>California_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Colorado_Leads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Colorado Leads</label>
        <queue>Colorado_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Connecticut_Leads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Connecticut Leads</label>
        <queue>Connecticut_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Delaware_Leads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Delaware Leads</label>
        <queue>Delaware_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Florida_Leads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Florida Leads</label>
        <queue>Florida_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Georgia_Leads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Georgia Leads</label>
        <queue>Georgia_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Hawaii_Leads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Hawaii Leads</label>
        <queue>Hawaii_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Idaho_Leads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Idaho Leads</label>
        <queue>Idaho_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Illinois_Leads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Illinois Leads</label>
        <queue>Illinois_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Indiana_Leads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Indiana Leads</label>
        <queue>Indiana_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Comcast_Business_Lead</fullName>
        <active>true</active>
        <businessProcess>Comcast Business Lead Process</businessProcess>
        <label>Comcast Business Lead</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>